--- a/src/index.html
+++ b/src/index.html
@@ -9,10 +9,10 @@
   <body>
     <section class="countries">
     <h1 class="main-title">Search Countries</h1>
-    <input type="text" id="search-box" />
+    <input type="text" id="search-box" placeholder="Search..."/>
     <ul class="country-list"></ul>
     <div class="country-info"></div>
    </section>
-    <script src="index.js"></script>
+    <script src="./index.js"></script>
   </body>
 </html>
