--- a/src/index.html
+++ b/src/index.html
@@ -8,11 +8,20 @@
   </head>
   <body>
     <section class="countries">
-    <h1 class="main-title">Search Countries</h1>
-    <input type="text" id="search-box" placeholder="Search..."/>
+    <h1 class="main-title">Search Country</h1>
+    <div class="container">
+
+      <input type="text" id="search-box" placeholder="Search...">
+      <div class="search"></div>
+      
+      </div>
+
     <ul class="country-list"></ul>
     <div class="country-info"></div>
    </section>
+
+   
+
     <script src="./index.js"></script>
   </body>
 </html>
